--- a/game/Ny mappe/game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/game/Ny mappe/game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -35,8 +35,8 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-E22TJNO
 LastExecutedLaunchName=DESKTOP-E22TJNO
 
@@ -491,7 +491,7 @@ HierarchicalLODOutliner.TimeStamp=2016.06.12-09.32.07
 HierarchicalLODOutliner.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=2240.000 Y=160.000
@@ -528,6 +528,10 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [Directories2]
 UNR=../../../../../../Users/sondr/Documents/sondre/game/Ny mappe/game/Content/
@@ -542,5 +546,71 @@ MeshImportExport=../../../../../../Users/sondr/Documents/sondre/game/Ny mappe/ga
 WorldRoot=../../../../../../Users/sondr/Documents/sondre/game/Ny mappe/game/Content/
 Level=../../../../../../Users/sondr/Documents/sondre/game/Ny mappe/game/Content/
 Project=C:/Program Files (x86)/Epic Games/4.12/
+
+[MRU]
+MRUItem0=/Game/map
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[LandscapeEdit]
+ToolStrength=0.201835
+NoiseScale=102.276146
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200.000000
+bUseFlattenTarget=False
+FlattenTarget=0.000000
+RampWidth=2000.000000
+RampSideFalloff=0.400000
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=
+ImportLandscape_AlphamapType=0
+
+[FoliageEdit]
+WindowPosition=-1,-1,284,400
+bShowPaletteItemDetails=True
+bShowPaletteItemTooltips=True
+ActivePaletteViewMode=0
+PaletteThumbnailScale=0.300000
+
+[DetailCategories]
+WorldSettings.World=True
+WorldSettings.GameMode=True
+WorldSettings.Physics=True
+WorldSettings.Lightmass=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.VR=True
+WorldSettings.Tick=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+LandscapeEditorObject.New Landscape=True
+LandscapeEditorObject.LandscapeEditor=True
+LandscapeEditorObject.Brush Settings=True
+LandscapeEditorObject.Tool Settings=True
+LandscapeEditorObject.Target Layers=True
+
+[MessageLog]
+LastLogListing=LightingResults
+
+[PlacementMode]
+RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_10
+
+[DetailPropertyExpansion]
+LightmassImportanceVolume="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
+Volume="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
+Brush="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
 
 
