--- a/game/Ny mappe/game/Config/DefaultEngine.ini
+++ b/game/Ny mappe/game/Config/DefaultEngine.ini
@@ -6,4 +6,7 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/map.map
+GameDefaultMap=/Game/map.map
 
